offline launch & log dump